[build-system]
requires = ["setuptools>=61.0", "wheel", "cython"]
build-backend = "setuptools.build_meta"

[project]
name = "PyDecisionGraph"
dynamic = ["version"]
description = "A rule-based decision tree implementation for Python"
readme = "README.md"
requires-python = ">=3.12"
license = "MPL-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Han Bolun", email = "Bolun.Han@outlook.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = ["decision tree", "decision graph", "rules", "cython"]
dependencies = []

[project.optional-dependencies]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinx-autodoc-typehints",
]
visualization = [
    "flask",
    "jinja2"
]

[project.urls]
Homepage = "https://github.com/BolunHan/PyDecisionGraph"
Repository = "https://github.com/BolunHan/PyDecisionGraph"
Issues = "https://github.com/BolunHan/PyDecisionGraph/issues"

[tool.setuptools.dynamic]
version = { attr = "decision_graph.__version__" }