[metadata]
name = PyDecisionGraph
version = attr: decision_graph.__version__
author = Han Bolun
author_email = Bolun.Han@outlook.com
url = https://github.com/BolunHan/PyDecisionGraph
description = A rule-based decision tree implementation for Python
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.12
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    demo*
    tests*

[options.entry_points]
# no console scripts for now

[bdist_wheel]
universal = 0
